test/conformance/kuttl/validate/clusterpolicy/cornercases/external-metrics/00-keda.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- keda.yaml
assert:
- keda-ready.yaml
