test/conformance/kuttl/validate/clusterpolicy/cornercases/external-metrics/01-cluster-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- cluster-policy.yaml
assert:
- cluster-policy-ready.yaml
