test/conformance/kuttl/validate/clusterpolicy/cornercases/external-metrics/03-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keda-metrics-apiserver
  namespace: keda
status:
  availableReplicas: 1
  readyReplicas: 1
  replicas: 1
