test/conformance/kuttl/validate/clusterpolicy/cornercases/external-metrics/04-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
    name: external-metrics-policy
status:
  ready: true
