test/conformance/kuttl/validate/clusterpolicy/cornercases/external-metrics/05-assert.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
    name: external-metrics-policy-default
    namespace: default
status:
  ready: true
